--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <body>
     <header>
-        <h1>Welcome to DataUse</h1>
+        <h1>Welcome to DataUse1</h1>
         <p>Empowering Data-Driven Decisions for the Future</p>
     </header>
 
